[project]
authors = [{ name = "pablo vela", email = "pablovela5620@gmail.com" }]
name = "egoexo-forge"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [
    "gradio>=5.22.0",
    "gradio-rerun>=0.23.3,<0.24",
    "gradio-huggingfacehub-search>=0.0.12,<0.0.13",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
egoexo_forge = { path = ".", editable = true }
simplecv = { git = "https://github.com/pablovela5620/simplecv.git", rev = "39e721416f8fa77d2cab6df69034f9acce202fc2" }


[tool.pixi.tasks]
app = { cmd = "python tools/app.py", description = "Run egoexo viewer Gradio app" }

[tool.pixi.dependencies]
python = "==3.12"
jaxtyping = ">=0.2.33,<0.3"
beartype = ">=0.19.0,<0.20"
numpy = ">=2.0"
einops = ">=0.8.0,<0.9"
icecream = ">=2.1.3,<3"
py-opencv = ">=4.10.0,<5"
rerun-sdk = ">=0.23.1"
tyro = ">=0.9.1,<0.10"
tqdm = ">=4.67.1,<5"
huggingface_hub = "*"
open3d = ">=0.18.0,<0.19"
scipy = ">=1.15.2,<2"
pyserde = ">=0.24.0,<0.25"
h5py = ">=3.13.0,<4"
natsort = ">=8.4.0,<9"

[tool.ruff]
line-length = 150
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore = [
    "E501", # Line too long.
    "F722", # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "F821", # Forward annotation false positive from jaxtyping. Should be caught by pyright.
]
